crates/nash-can/src/snapshots/nash_can__pattern__tests__bool_false_pattern.snap
---
source: crates/nash-can/src/pattern.rs
description: "False"
---
(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 6,
            },
        },
        value: Bool {
            union: Union {
                kind: Type,
                context: [],
                name: Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: "bool",
                },
                parameters: [],
                ctors: [
                    Ctor {
                        labels: None,
                        name: "False",
                        index: 0,
                        arity: 0,
                        arguments: [],
                    },
                    Ctor {
                        labels: None,
                        name: "True",
                        index: 1,
                        arity: 0,
                        arguments: [],
                    },
                ],
                alternatives: 2,
                options: Enum,
                data_layout: None,
            },
            value: false,
        },
    },
    {},
)
