crates/nash-can/src/snapshots/nash_can__pattern__tests__bool_pattern_with_args_is_bad_arity.snap
---
source: crates/nash-can/src/pattern.rs
description: True x
info: diagnostic
---
nash::names::bad_arity

  × The `True` variant needs 0 arguments, but I see 1 instead:
   ╭─[src/Main.nash:1:1]
 1 │ True x
   · ──────
   ╰────
  help: Remove the extra arguments or check the grouping.
