crates/nash-can/src/snapshots/nash_can__pattern__tests__constr_rejects_two_fields.snap
---
source: crates/nash-can/src/pattern.rs
description: Constr index items
info: diagnostic
---
nash::names::bad_arity

  × The `Constr` variant needs 1 argument, but I see 2 instead:
   ╭─[src/Main.nash:1:1]
 1 │ Constr index items
   · ──────────────────
   ╰────
  help: Remove the extra arguments or check the grouping.
