crates/nash-can/src/snapshots/nash_can__pattern__tests__ctor_not_found.snap
---
source: crates/nash-can/src/pattern.rs
description: Foo
info: diagnostic
---
nash::names::not_found_ctor

  × Unknown variant `Foo`.
   ╭─[src/Main.nash:1:1]
 1 │ Foo
   · ───
   ╰────
  help: Define or import this name.
