crates/nash-can/src/snapshots/nash_can__pattern__tests__ctor_with_args.snap
---
source: crates/nash-can/src/pattern.rs
description: Just x
---
(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 7,
            },
        },
        value: Constructor(
            PatternCtor {
                reference: ConstructorName {
                    home: ModuleName {
                        package: None,
                        name: "Maybe",
                    },
                    union: "Maybe",
                    name: "Just",
                },
                union: Union {
                    kind: Arrow(
                        Type,
                        Type,
                    ),
                    context: [],
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 0,
                            },
                        },
                        value: "Maybe",
                    },
                    parameters: [
                        "a",
                    ],
                    ctors: [
                        Ctor {
                            labels: None,
                            name: "Nothing",
                            index: 1,
                            arity: 0,
                            arguments: [],
                        },
                        Ctor {
                            labels: None,
                            name: "Just",
                            index: 0,
                            arity: 1,
                            arguments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                            ],
                        },
                    ],
                    alternatives: 2,
                    options: Normal,
                    data_layout: None,
                },
                index: 0,
                arguments: [
                    PatternCtorArg {
                        index: 0,
                        typ: Located {
                            region: Region {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 0,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 6,
                                },
                                end: Position {
                                    line: 1,
                                    column: 7,
                                },
                            },
                            value: Var(
                                "x",
                            ),
                        },
                    },
                ],
                options: Normal,
                alternatives: 2,
            },
        ),
    },
    {
        "x": Region {
            start: Position {
                line: 1,
                column: 6,
            },
            end: Position {
                line: 1,
                column: 7,
            },
        },
    },
)
