crates/nash-can/src/snapshots/nash_can__pattern__tests__ctor_wrong_arity.snap
---
source: crates/nash-can/src/pattern.rs
description: Just x y
info: diagnostic
---
nash::names::bad_arity

  × The `Just` variant needs 1 argument, but I see 2 instead:
   ╭─[src/Main.nash:1:1]
 1 │ Just x y
   · ────────
   ╰────
  help: Remove the extra arguments or check the grouping.
