crates/nash-can/src/snapshots/nash_can__pattern__tests__duplicate_vars.snap
---
source: crates/nash-can/src/pattern.rs
description: "( x, x )"
info: diagnostic
---
nash::names::duplicate_pattern

  × This `case` pattern has multiple `x` variables.
   ╭─[src/Main.nash:1:6]
 1 │ ( x, x )
   ·   ┬  ┬
   ·   │  ╰── and another first definition
   ·   ╰── first definition
   ╰────
  help: Rename one of the definitions.
