crates/nash-can/src/snapshots/nash_can__pattern__tests__record_ctor_in_pattern.snap
---
source: crates/nash-can/src/pattern.rs
description: Point
info: diagnostic
---
nash::names::pattern_has_record_ctor

  × Record constructor `Point` cannot be used in a pattern.
   ╭─[src/Main.nash:1:1]
 1 │ Point
   · ─────
   ╰────
  help: Bind the record to a variable and access its fields.
